syntax = "proto3";

package ares.messaging;

import "Limits.proto";

message ParameterMetadata {
	string name = 1; // Name descriptor of the argument/parameter
	string unit = 2; // Unit descriptor, if applicable, of the argument/parameter
	repeated Limits constraints = 3; // Collection of limits for the argument/parameter formatted to be easily converted into planner requests.
	int64 index = 4; // Index of the collection in which executed this template
}